--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.dock</groupId>
-	<artifactId>account-service</artifactId>
+	<artifactId>bank-account-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>account-service</name>
+	<name>bank-account-service</name>
 	<description>Project to manager the accounts of the customers</description>
 	<properties>
 		<java.version>11</java.version>
