--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,3 +1,11 @@
 spring:
   jackson:
     time-zone: "America/Sao_Paulo"
+  h2:
+    console:
+      enabled: true
+  datasource:
+    driverClassName: "org.h2.Driver"
+    url: "jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;CASE_INSENSITIVE_IDENTIFIERS=true"
+    username: "sa"
+    password:
