--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -6,6 +6,6 @@ spring:
       enabled: true
   datasource:
     driverClassName: "org.h2.Driver"
-    url: "jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;CASE_INSENSITIVE_IDENTIFIERS=true"
+    url: "jdbc:h2:mem:testdb;CASE_INSENSITIVE_IDENTIFIERS=true"
     username: "sa"
     password:
