--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,53 @@
 version: '3.9'
 
 services:
-  mysql:
-    image: mysql:5.7
-    environment:
-      - MYSQL_DATABASE=bank-account-db
-      - MYSQL_USER=module
-      - MYSQL_PASSWORD=module
-      - MYSQL_ROOT_PASSWORD=root
-    volumes:
-      - ./dbdata:/var/lib/mysql
+  nginx:
+    image: dock/nginx:latest
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
+    ports:
+      - "8090:80"
     networks:
-      - database-network
-  application:
+      - nginx-network
+    depends_on:
+      - app
+  app:
     image: dock/bank-account-service:latest
     build:
       context: .
-      dockerfile: Dockerfile.application
+      dockerfile: Dockerfile.app
     environment:
       - DB_USERNAME=bank-account
       - DB_PASSWORD=bank-account
       - DB_HOST=mysql
       - DB_PORT=3306
       - DB_DATABASE=bank-account-db
-    entrypoint: dockerize -wait tcp://mysql:3306 java -jar /app.jar
+    entrypoint: dockerize -wait tcp://mysql:3306 -timeout 20s java -jar /app.jar
+    expose:
+      - "8080"
     networks:
-      - database-network
-      - proxy-network
+      - mysql-network
+      - nginx-network
     depends_on:
       - mysql
-  reverse-proxy:
-    image: dock/web-proxy:latest
-    build:
-      context: .
-      dockerfile: Dockerfile.proxy
+  mysql:
+    image: mysql:5.7
+    restart: always
+    environment:
+      - MYSQL_DATABASE=bank-account-db
+      - MYSQL_USER=bank-account
+      - MYSQL_PASSWORD=bank-account
+      - MYSQL_ROOT_PASSWORD=root
     ports:
-      - 8000:80
-    entrypoint: dockerize -wait http://application:8080 /docker-entrypoint.sh nginx -g daemon
-    depends_on:
-      - application
+      - "3306:3306"
+    volumes:
+      - ./dbdata:/var/lib/mysql
     networks:
-      - proxy-network
+      - mysql-network
 
 networks:
-  database-network:
+  mysql-network:
     driver: bridge
-  proxy-network:
+  nginx-network:
     driver: bridge
