--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,8 @@ spring:
     lazy-initialization: true
   jackson:
     date-format: "yyyy-MM-dd"
+  datasource:
+    driver-class-name: "com.mysql.cj.jdbc.Driver"
+    url: "jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_DATABASE}?useSSL=false&useUnicode=true&characterEncoding=utf-8"
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
