feat: Add the configurations to loadbalance and replica set

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,34 +20,58 @@ services:
     environment:
       - DB_USERNAME=bank-account
       - DB_PASSWORD=bank-account
-      - DB_HOST=mysql
-      - DB_PORT=3306
-      - DB_DATABASE=bank-account-db
-    entrypoint: dockerize -wait tcp://mysql:3306 -timeout 20s java -jar /app.jar
+      - DB_URL=jdbc:mysql:replication://address=(type=master)(host=mysql-master),address=(type=slave)(host=mysql-slave)/bank-account-db?&useSSL=false&useUnicode=true&characterEncoding=utf-8
+    entrypoint: dockerize -wait tcp://mysql-master:3306 -wait tcp://mysql-slave:3306 -timeout 20s java -jar /app.jar
     expose:
       - "8080"
     networks:
       - mysql-network
       - nginx-network
     depends_on:
-      - mysql
-  mysql:
-    image: mysql:5.7
+      - mysql-master
+  mysql-master:
+    image: docker.io/bitnami/mysql:5.7
     restart: always
-    environment:
-      - MYSQL_DATABASE=bank-account-db
-      - MYSQL_USER=bank-account
-      - MYSQL_PASSWORD=bank-account
-      - MYSQL_ROOT_PASSWORD=root
     ports:
       - "3306:3306"
     volumes:
-      - ./dbdata:/var/lib/mysql
+      - 'mysql-master_data:/bitnami/mysql/data'
+    environment:
+      - MYSQL_REPLICATION_MODE=master
+      - MYSQL_REPLICATION_USER=repl_user
+      - MYSQL_REPLICATION_PASSWORD=repl_password
+      - MYSQL_ROOT_PASSWORD=bank-account-root
+      - MYSQL_DATABASE=bank-account-db
+      - MYSQL_ROOT_HOST='%'
+      - MYSQL_USER=bank-account
+      - MYSQL_PASSWORD=bank-account
     networks:
       - mysql-network
+  mysql-slave:
+      image: docker.io/bitnami/mysql:5.7
+      restart: always
+      ports:
+        - "3307:3306"
+      environment:
+       - MYSQL_REPLICATION_MODE=slave
+       - MYSQL_REPLICATION_USER=repl_user
+       - MYSQL_REPLICATION_PASSWORD=repl_password
+       - MYSQL_MASTER_HOST=mysql-master
+       - MYSQL_MASTER_PORT_NUMBER=3306
+       - MYSQL_MASTER_ROOT_PASSWORD=bank-account-root
+       - MYSQL_ROOT_HOST='%'
+       - MYSQL_ROOT_PASSWORD=bank-account-root
+      networks:
+        - mysql-network
+      depends_on:
+        - mysql-master
 
 networks:
   mysql-network:
     driver: bridge
   nginx-network:
     driver: bridge
+
+volumes:
+  mysql-master_data:
+    driver: local
