--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.dock</groupId>
 	<artifactId>bank-account-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<name>bank-account-service</name>
 	<description>Project to manager the accounts of the customers</description>
 	<properties>
